syntax = "proto3";

package reports.v1;

service ReportsService {
  // Метод для создания задачи на формирование отчёта.
  rpc CreateReport (CreateReportRequest) returns (CreateReportResponse);

  // Метод для получения статуса задачи на формирование отчёта.
  rpc GetReport (GetReportRequest) returns (GetReportResponse);
}

// Тип для описания отдельного блока отчета.
message Block {
  // Обязятельно содержит информацию о расположении блока.
  int32 width = 1;

  // Возможно содержит информацию об отступах.
  Margin margin = 2;
  
  // Остальное содержимое зависит как раз от типа.
  oneof content {
    TextBlock text_block = 3;
    ImageBlock image_block = 4;
    TableBlock table_block = 5;
  }
}

message Margin {
  int32 top = 1;
  int32 bottom = 2;
  int32 left = 3;
  int32 right = 4;
}

// Описание содержимого для текстового блока.
message TextBlock {
  // Сам текст.
  string content = 1;

  // Стили.
  Style style = 2;
}

// Описание содержимого для блока с изображением.
message ImageBlock {
  // Ссылка на изображение.
  string content = 1;
}

// Описание содержимого для блока с таблицей.
message TableBlock {
  // Описание отдельной строки таблицы.
  repeated TableBlockRow rows = 1;
}

// Описание отдельной строки таблицы.
message TableBlockRow {
  repeated string data = 1;
}

// Описание стилей текста.
message Style {
  // Позиционирование текста.
  enum Position {
    Center = 0;
    Left = 1;
    Right = 2;
  }

  Position position = 1;

  // Размер текста.
  int32 size = 2;
}

message CreateReportRequest {
  string name = 1;
  repeated Block blocks = 2;
}

message CreateReportResponse {
  string id = 1;
}

message GetReportRequest {
  string id = 1;
}

message GetReportResponse {
  enum Status {
      NotStarted = 0;
      Processing = 1;
      Ready = 2;
      Error = 3;
  }

  Status status = 1;
  string link = 2;
}